Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-midnight
 # theme: jekyll-theme-leap-day
 title: 
 description: The moment you position yourself, you become exposed, and if you fall in that you are in trouble.
