--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 theme: jekyll-theme-cayman
 # theme: jekyll-theme-leap-day
+# theme: jekyll-theme-modernist
+
+# theme: jekyll-theme-midnight
+# theme: jekyll-theme-tactile
+# theme: jekyll-theme-architect
+# theme: jekyll-theme-slate
 title: 
 description: The moment you position yourself, you become exposed, and if you fall in that you are in trouble.
 show_downloads: false
