Set theme jekyll-theme-modernist

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-modernist
 # theme: jekyll-theme-leap-day
-# theme: jekyll-theme-modernist
+# theme: jekyll-theme-cayman
 
 # theme: jekyll-theme-midnight
 # theme: jekyll-theme-tactile
